--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,10 @@
             "dest": "/index.js"
         },
         {
+            "src": "/public/(.*)",
+            "dest": "/public/$1"
+        },
+        {
             "src": "/(.*)",
             "dest": "/index.js"
         }
